<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/one"
            android:orderInCategory="0"
            android:title="@string/update_interval_extra_short" />
        <item
            android:id="@+id/two"
            android:orderInCategory="1"
            android:title="@string/update_interval_short" />
        <item
            android:id="@+id/three"
            android:orderInCategory="2"
            android:title="@string/update_interval_medium" />
        <item
            android:id="@+id/four"
            android:orderInCategory="3"
            android:title="@string/update_interval_long" />
        <item
            android:id="@+id/five"
            android:orderInCategory="4"
            android:title="@string/update_interval_extra_long" />
    </group>
</menu>