<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparentBlack"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/info_dialog_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="460dp"
        android:layout_height="match_parent"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="35dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/info_dialog_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8sp"
                android:gravity="center"
                android:text="@string/air_quality_monitoring_description_heading"
                android:textAppearance="@style/InfoDialogHeading1Text" />

            <TextView
                android:id="@+id/info_dialog_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2sp"
                android:gravity="center"
                android:text="@string/temperature"
                android:textAppearance="@style/InfoDialogHeading2Text" />

            <TextView
                android:id="@+id/info_dialog_temperature_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8sp"
                android:gravity="center"
                android:textAppearance="@style/InfoDialogBodyText"
                tools:text="@string/temperature_description" />

            <TextView
                android:id="@+id/info_dialog_humidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2sp"
                android:gravity="center"
                android:textAppearance="@style/InfoDialogHeading2Text"
                tools:text="@string/relative_humidity_rh" />

            <TextView
                android:id="@+id/info_dialog_humidity_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8sp"
                android:gravity="center"
                android:textAppearance="@style/InfoDialogBodyText"
                tools:text="@string/humidity_description" />

            <TextView
                android:id="@+id/info_dialog_pressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2sp"
                android:gravity="center"
                android:textAppearance="@style/InfoDialogHeading2Text"
                tools:text="@string/atmospheric_pressure" />

            <TextView
                android:id="@+id/info_dialog_pressure_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8sp"
                android:gravity="center"
                android:textAppearance="@style/InfoDialogBodyText"
                tools:text="@string/pressure_description" />

            <TextView
                android:id="@+id/info_dialog_co2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2sp"
                android:gravity="center"
                android:paddingBottom="5sp"
                android:textAppearance="@style/InfoDialogHeading2Text"
                tools:text="@string/co2" />

            <TextView
                android:id="@+id/info_dialog_co2_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8sp"
                android:gravity="center"
                android:textAppearance="@style/InfoDialogBodyText"
                tools:text="@string/co2_description" />

            <TextView
                android:id="@+id/info_dialog_tvoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2sp"
                android:gravity="center"
                android:textAppearance="@style/InfoDialogHeading2Text"
                tools:text="@string/tvoc" />

            <TextView
                android:id="@+id/info_dialog_tvoc_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8sp"
                android:gravity="center"
                android:textAppearance="@style/InfoDialogBodyText"
                tools:text="@string/tvoc_description" />

            <TextView
                android:id="@+id/info_dialog_pm25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2sp"
                android:gravity="center"
                android:textAppearance="@style/InfoDialogHeading2Text"
                tools:text="@string/pm25" />

            <TextView
                android:id="@+id/info_dialog_pm25_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8sp"
                android:gravity="center"
                android:textAppearance="@style/InfoDialogBodyText"
                tools:text="@string/pm25_description" />

            <TextView
                android:id="@+id/info_dialog_pm10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2sp"
                android:gravity="center"
                android:textAppearance="@style/InfoDialogHeading2Text"
                tools:text="@string/pm10" />

            <TextView
                android:id="@+id/info_dialog_pm10_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8sp"
                android:gravity="center"
                android:textAppearance="@style/InfoDialogBodyText"
                tools:text="@string/pm10_description" />

            <TextView
                android:id="@+id/info_dialog_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@style/InfoDialogCaptionText"
                tools:text="@string/caption" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>