<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">


    <ImageView
        android:id="@+id/background_image"
        android:layout_width="800dp"
        android:layout_height="480dp"
        android:contentDescription="@null"
        android:src="@drawable/background_image_good"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/background_overlay_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@null"
        android:src="@drawable/background_overlay_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/background_overlay_right_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@null"
        android:src="@drawable/background_overlay_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/background_overlay_right_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="165dp"
        android:contentDescription="@null"
        android:src="@drawable/background_overlay_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/background_overlay_right_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="322dp"
        android:contentDescription="@null"
        android:src="@drawable/background_overlay_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/background_overlay_middle_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="410dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@null"
        android:src="@drawable/background_overlay_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/background_overlay_middle_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="410dp"
        android:layout_marginTop="165dp"
        android:contentDescription="@null"
        android:src="@drawable/background_overlay_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/background_overlay_middle_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="410dp"
        android:layout_marginTop="322dp"
        android:contentDescription="@null"
        android:src="@drawable/background_overlay_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/settings_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/update_interval_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/info_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="415dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperature_value"
        android:layout_width="wrap_content"
        android:layout_height="62sp"
        android:includeFontPadding="false"
        android:textAppearance="@style/TemperatureText"
        app:layout_constraintEnd_toStartOf="@+id/temperature_unit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/status_label"
        app:layout_constraintTop_toBottomOf="@+id/status_label"
        tools:text="27.4" />

    <TextView
        android:id="@+id/pressure_value"
        android:layout_width="wrap_content"
        android:layout_height="36sp"
        android:layout_marginBottom="15dp"
        android:includeFontPadding="false"
        android:textAppearance="@style/SensorValuesText"
        app:layout_constraintBottom_toBottomOf="@+id/background_overlay_right_1"
        app:layout_constraintEnd_toStartOf="@+id/pressure_unit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/background_overlay_right_1"
        app:layout_constraintTop_toTopOf="@+id/background_overlay_right_1"
        tools:text="1013.2" />

    <TextView
        android:id="@+id/pressure_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/pressure_unit"
        android:textAppearance="@style/SensorValuesUnitText"
        app:layout_constraintBottom_toBottomOf="@+id/pressure_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pressure_value"
        tools:text="hPa" />

    <TextView
        android:id="@+id/humidity_value"
        android:layout_width="wrap_content"
        android:layout_height="36sp"
        android:layout_marginBottom="15dp"
        android:includeFontPadding="false"
        android:textAppearance="@style/SensorValuesText"
        android:tooltipText="This is relative humidity. In healthy environment, it should range from 40% to 50%."
        app:layout_constraintBottom_toBottomOf="@+id/background_overlay_middle_1"
        app:layout_constraintEnd_toStartOf="@+id/humidity_unit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/background_overlay_middle_1"
        app:layout_constraintTop_toTopOf="@+id/background_overlay_middle_1"
        tools:text="54.1" />

    <TextView
        android:id="@+id/pm10_value"
        android:layout_width="wrap_content"
        android:layout_height="36sp"
        android:includeFontPadding="false"
        android:textAppearance="@style/SensorValuesText"
        app:layout_constraintBottom_toBottomOf="@+id/background_overlay_right_3"
        app:layout_constraintEnd_toStartOf="@+id/pm10_unit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/background_overlay_right_3"
        app:layout_constraintTop_toTopOf="@+id/background_overlay_right_3"
        tools:text="54" />

    <TextView
        android:id="@+id/tvoc_value"
        android:layout_width="wrap_content"
        android:layout_height="36sp"
        android:layout_marginBottom="15dp"
        android:includeFontPadding="false"
        android:textAppearance="@style/SensorValuesText"
        app:layout_constraintBottom_toBottomOf="@+id/background_overlay_right_2"
        app:layout_constraintEnd_toStartOf="@+id/tvoc_unit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/background_overlay_right_2"
        app:layout_constraintTop_toTopOf="@+id/background_overlay_right_2"
        tools:text="11" />

    <TextView
        android:id="@+id/pm25_value"
        android:layout_width="wrap_content"
        android:layout_height="36sp"
        android:includeFontPadding="false"
        android:textAppearance="@style/SensorValuesText"
        app:layout_constraintBottom_toBottomOf="@+id/background_overlay_middle_3"
        app:layout_constraintEnd_toStartOf="@+id/pm25_unit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/background_overlay_middle_3"
        app:layout_constraintTop_toTopOf="@+id/background_overlay_middle_3"
        tools:text="10" />

    <TextView
        android:id="@+id/co2_value"
        android:layout_width="wrap_content"
        android:layout_height="36sp"
        android:layout_marginBottom="15dp"
        android:includeFontPadding="false"
        android:textAppearance="@style/SensorValuesText"
        app:layout_constraintBottom_toBottomOf="@+id/background_overlay_middle_2"
        app:layout_constraintEnd_toStartOf="@+id/co2_unit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/background_overlay_middle_2"
        app:layout_constraintTop_toTopOf="@+id/background_overlay_middle_2"
        tools:text="500" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:drawablePadding="0dp"
        android:fontFamily="@font/varela_round"
        android:includeFontPadding="false"
        android:lineSpacingExtra="0dp"
        android:textAppearance="@style/StatusText"
        app:layout_constraintBottom_toTopOf="@+id/status_label"
        app:layout_constraintEnd_toEndOf="@+id/status_label"
        app:layout_constraintStart_toStartOf="@+id/status_label"
        tools:text="Good" />

    <TextView
        android:id="@+id/status_label"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="400dp"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:textAppearance="@style/AdviceText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Everything looks good" />

    <TextView
        android:id="@+id/temperature_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_label"
        android:textAppearance="@style/TemperatureLabelText"
        app:layout_constraintEnd_toEndOf="@+id/status_label"
        app:layout_constraintStart_toStartOf="@+id/status_label"
        app:layout_constraintTop_toBottomOf="@+id/temperature_value"
        tools:text="Temperature" />

    <ImageView
        android:id="@+id/status_image"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:contentDescription="@null"
        android:src="@drawable/good"
        app:layout_constraintBottom_toTopOf="@+id/status"
        app:layout_constraintEnd_toEndOf="@+id/status"
        app:layout_constraintStart_toStartOf="@+id/status" />

    <TextView
        android:id="@+id/humidity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity_label"
        android:textAppearance="@style/SensorValuesLabelText"
        app:layout_constraintEnd_toEndOf="@+id/background_overlay_middle_1"
        app:layout_constraintStart_toStartOf="@+id/background_overlay_middle_1"
        app:layout_constraintTop_toBottomOf="@+id/humidity_value"
        tools:text="Humidity" />

    <TextView
        android:id="@+id/pressure_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/air_pressure_label"
        android:textAppearance="@style/SensorValuesLabelText"
        app:layout_constraintEnd_toEndOf="@+id/background_overlay_right_1"
        app:layout_constraintStart_toStartOf="@+id/background_overlay_right_1"
        app:layout_constraintTop_toBottomOf="@+id/pressure_value"
        tools:text="Air Pressure" />

    <TextView
        android:id="@+id/pm25_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dust_pm_2_5_label"
        android:textAppearance="@style/SensorValuesLabelText"
        app:layout_constraintEnd_toEndOf="@+id/background_overlay_middle_3"
        app:layout_constraintStart_toStartOf="@+id/background_overlay_middle_3"
        app:layout_constraintTop_toBottomOf="@+id/pm25_value"
        tools:text="Dust PM 2.5" />

    <TextView
        android:id="@+id/pm10_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dust_pm_10_label"
        android:textAppearance="@style/SensorValuesLabelText"
        app:layout_constraintEnd_toEndOf="@id/background_overlay_right_3"
        app:layout_constraintStart_toStartOf="@+id/background_overlay_right_3"
        app:layout_constraintTop_toBottomOf="@+id/pm10_value"
        tools:text="Dust PM 10" />

    <TextView
        android:id="@+id/co2_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/co2_label"
        android:textAppearance="@style/SensorValuesLabelText"
        app:layout_constraintEnd_toEndOf="@+id/background_overlay_middle_2"
        app:layout_constraintStart_toStartOf="@+id/background_overlay_middle_2"
        app:layout_constraintTop_toBottomOf="@+id/co2_value"
        tools:text="CO2" />

    <TextView
        android:id="@+id/tvoc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvoc_label"
        android:textAppearance="@style/SensorValuesLabelText"
        app:layout_constraintEnd_toEndOf="@id/background_overlay_right_2"
        app:layout_constraintStart_toStartOf="@+id/background_overlay_right_2"
        app:layout_constraintTop_toBottomOf="@+id/tvoc_value"
        tools:text="TVOC" />

    <TextView
        android:id="@+id/humidity_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/humidity_unit"
        android:textAppearance="@style/SensorValuesUnitText"
        app:layout_constraintBottom_toBottomOf="@+id/humidity_value"
        app:layout_constraintEnd_toEndOf="@+id/background_overlay_middle_1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/humidity_value"
        tools:text="%" />

    <TextView
        android:id="@+id/tvoc_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/tvoc_unit"
        android:textAppearance="@style/SensorValuesUnitText"
        app:layout_constraintBottom_toBottomOf="@+id/tvoc_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvoc_value"
        tools:text="ppb" />

    <TextView
        android:id="@+id/pm10_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/pm10_unit"
        android:textAppearance="@style/SensorValuesUnitText"
        app:layout_constraintBottom_toBottomOf="@+id/pm10_value"
        app:layout_constraintEnd_toEndOf="@id/background_overlay_right_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pm10_value"
        tools:text="ug/m3" />

    <TextView
        android:id="@+id/pm25_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/pm25_unit"
        android:textAppearance="@style/SensorValuesUnitText"
        app:layout_constraintBottom_toBottomOf="@+id/pm25_value"
        app:layout_constraintEnd_toEndOf="@+id/background_overlay_middle_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pm25_value"
        tools:text="ug/m3" />

    <TextView
        android:id="@+id/co2_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/co2_unit"
        android:textAppearance="@style/SensorValuesUnitText"
        app:layout_constraintBottom_toBottomOf="@+id/co2_value"
        app:layout_constraintEnd_toEndOf="@+id/background_overlay_middle_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/co2_value"
        tools:text="ppm" />

    <TextView
        android:id="@+id/temperature_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_unit"
        android:textAppearance="@style/TemperatureUnitText"
        app:layout_constraintBottom_toTopOf="@+id/temperature_label"
        app:layout_constraintEnd_toEndOf="@+id/status_label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/temperature_value"
        tools:text="°C" />

</androidx.constraintlayout.widget.ConstraintLayout>